<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_10dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation">

    <!-- Used for the ripple effect on touch -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_elevation"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_width"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/placeholder_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            card_view:layout_constraintStart_toEndOf="@+id/avatar"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/placeholder_job_title"
            android:textSize="15sp"
            android:textColor="@color/grey"
            card_view:layout_constraintStart_toEndOf="@+id/avatar"
            card_view:layout_constraintTop_toBottomOf="@+id/name"
            tools:layout_editor_absoluteY="7dp"
            card_view:flow_wrapMode="aligned"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/placeholder_email"
            android:textSize="15sp"
            android:textColor="@color/grey"
            card_view:layout_constraintStart_toEndOf="@+id/avatar"
            card_view:layout_constraintTop_toBottomOf="@+id/jobTitle"
            tools:layout_editor_absoluteY="7dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
