<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.virginmoney.ui.usersList.UsersViewModel" />
    </data>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/movieCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_elevation"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:scaleType="fitXY"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:text="@string/placeholder_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/avatar" />

            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:text="@string/placeholder_job_title"
                android:textColor="@color/grey"
                android:textSize="15sp"
                card_view:flow_wrapMode="aligned"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/name"
                tools:layout_editor_absoluteY="7dp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:text="@string/placeholder_email"
                android:textColor="@color/grey"
                android:textSize="15sp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/jobTitle"
                tools:layout_editor_absoluteY="7dp" />

            <TextView
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:text="@string/placeholder_fav_color"
                android:textColor="@color/grey"
                android:textSize="15sp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/email"
                tools:layout_editor_absoluteY="7dp" />

            <Button
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@color/primary"
                android:text="@android:string/ok"
                android:textColor="@color/white"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/color" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
